# Regime-Modeling

./: .gitignore  CLAUDE.md  DASHBOARD_README.md  HMM_MODEL_ALIGNMENT.md  Milestone_1.md  Proposal.md  README.md  REFACTORING_PLAN.md  Results.md  __main__.py  best_config.txt  cache_data.py  features.py  grid_search_results_20251121_170032.csv  grid_search_results_20251207_002958.csv  grid_search_results_20251207_010312.csv  grid_search_results_20251207_171502.csv  grid_search_results_20251208_053120.csv  grid_search_results_20260303_000112.csv  grid_search_results_20260303_000519.csv  grid_search_results_20260303_003558.csv  grid_search_results_20260303_030056.csv  inspect_regimes.py  merged_data_with_features.csv  model.py  online_ex.py  overnight_grid_search.py  pages_utils.py  portfolio_backtest.py  portfolio_visualizer.py  pyproject.toml  regime_summary.csv  requirements-check.py  requirements-cheeck.py  requirements.txt  run_best_config.py  run_grid_search.py  test_grid_search.py
Milestones/: Milestone_1.md  Milestone_2.md
dashboard_outputs/: portfolio_allocations.csv  regime_stats.json  risk_metrics.json
data/: __init__.py  data_utils.py  ind_stocks.py  indices.py  moving_averages.py  natural_resources.py
env/: pyvenv.cfg
models/: best_hmm_model_20251207_010312.pkl  best_hmm_model_20251207_171502.pkl  best_hmm_model_20251208_053120.pkl  best_hmm_model_20260303_000112.pkl  best_hmm_model_20260303_000519.pkl  best_hmm_model_20260303_003558.pkl  best_hmm_model_latest.pkl  pkl.py
pages/: __init__.py  moving_averages.py  moving_averages_mse.py  price_history.py  (+1 more)
(+32 files in other folders)
